using CommunityToolkit.Mvvm.ComponentModel;

namespace McDenisaKasse.ViewModels;

// Geändert von ObservableObject zu ObservableValidator für die Datenprüfung
public abstract class ViewModelBase : ObservableValidator
{
}