classDiagram
    class ViewModelBase {
        <<abstract>>
        +ValidateAllProperties()
        +bool HasErrors
    }

    class MainWindow {
        +OnBestellenClick()
        +OnAbbrechenClick()
    }

    class MenuWindow {
        +OnProduktClick()
        +OnZutatenClick()
    }

    class CheckoutWindow {
        +OnCancelClick()
    }

    class MenuViewModel {
        +ObservableCollection~BestellPosition~ Bestellungen
        +BestellPosition SelektiertePosition
        +LoeschePosition()
        +FuegeProduktHinzu(string, string)
    }

    class CheckoutViewModel {
        +string Vorname [Required]
        +string Name [Required]
        +string Adresse [Required]
        +async Task BarZahlen()
        +async Task KarteZahlen()
    }

    class BestellPosition {
        +string Name
        +int Menge
        +decimal GesamtPreis
    }

%% Vererbungen zeigen (Wichtig für Kriterium Objektorientierung)
    ViewModelBase <|-- MenuViewModel
    ViewModelBase <|-- CheckoutViewModel

%% Beziehungen
    MainWindow ..> MenuWindow : öffnet
    MenuWindow ..> CheckoutWindow : öffnet
    MenuWindow *-- MenuViewModel : DataContext
    CheckoutWindow *-- CheckoutViewModel : DataContext
    MenuViewModel "1" *-- "many" BestellPosition : enthält